--- a/build.gradle
+++ b/build.gradle
@@ -1,74 +1,14 @@
+// Top-level build file
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.2.2'
+    }
+}
+
 plugins {
-    id 'com.android.application'
-}
-
-android {
-    namespace 'com.brahman.downloader'
-    compileSdk 34
-
-    defaultConfig {
-        applicationId "com.brahman.downloader"
-        minSdk 26
-        targetSdk 34
-        versionCode 1
-        versionName "1.0.0"
-        multiDexEnabled true
-    }
-
-    signingConfigs {
-        release {
-            storeFile file('brahman.keystore')
-            storePassword System.getenv('KEYSTORE_PASSWORD') ?: 'brahman123'
-            keyAlias System.getenv('KEY_ALIAS') ?: 'brahman'
-            keyPassword System.getenv('KEY_PASSWORD') ?: 'brahman123'
-            v1SigningEnabled true
-            v2SigningEnabled true
-        }
-    }
-
-    buildTypes {
-        release {
-            signingConfig signingConfigs.release
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-
-    packagingOptions {
-        jniLibs {
-            useLegacyPackaging true
-        }
-        resources {
-            excludes += ['META-INF/DEPENDENCIES', 'META-INF/LICENSE', 'META-INF/LICENSE.txt', 'META-INF/NOTICE']
-        }
-    }
-}
-
-dependencies {
-    // yt-dlp bundled for Android - truly standalone
-    implementation 'com.github.yausername.youtubedl-android:library:0.17.0'
-    implementation 'com.github.yausername.youtubedl-android:ffmpeg:0.17.0'
-
-    // AndroidX
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'androidx.core:core:1.12.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.recyclerview:recyclerview:1.3.2'
-    implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'androidx.work:work-runtime:2.9.0'
-
-    // Material Design 3
-    implementation 'com.google.android.material:material:1.11.0'
-
-    // Image loading
-    implementation 'com.github.bumptech.glide:glide:4.16.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
-
-    // JSON
-    implementation 'com.google.code.gson:gson:2.10.1'
+    id 'com.android.application' version '8.2.2' apply false
 }
