--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,18 +11,28 @@ jobs:
     timeout-minutes: 45
 
     steps:
+      # 1️⃣ Checkout your code
       - name: Checkout code
         uses: actions/checkout@v4
 
+      # 2️⃣ Setup Java 17
       - name: Setup Java 17
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
 
+      # 3️⃣ Setup Android SDK
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
 
+      # 4️⃣ Install required SDK packages
+      - name: Install Android SDK packages
+        run: |
+          yes | sdkmanager --licenses
+          sdkmanager "platform-tools" "platforms;android-34" "build-tools;34.0.0"
+
+      # 5️⃣ Cache Gradle
       - name: Cache Gradle
         uses: actions/cache@v4
         with:
@@ -32,14 +42,17 @@ jobs:
           key: gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: gradle-
 
+      # 6️⃣ Make gradlew executable
       - name: Make gradlew executable
         run: chmod +x gradlew
 
+      # 7️⃣ Decode your keystore
       - name: Decode Keystore
         run: |
           echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > app/brahman.keystore
           echo "✅ Keystore ready"
 
+      # 8️⃣ Build Release APK
       - name: Build Release APK
         env:
           KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
@@ -49,6 +62,7 @@ jobs:
           ./gradlew assembleRelease --no-daemon --stacktrace
         timeout-minutes: 35
 
+      # 9️⃣ Locate and rename APK
       - name: Locate APK
         run: |
           echo "📦 Finding APK..."
@@ -57,12 +71,14 @@ jobs:
           ls -lh BrahmanDownloader.apk
           echo "✅ APK ready!"
 
+      # 🔟 Verify APK signature
       - name: Verify Signature
         run: |
           BUILD_TOOLS=$(ls $ANDROID_HOME/build-tools | sort -V | tail -1)
           $ANDROID_HOME/build-tools/$BUILD_TOOLS/apksigner verify --verbose BrahmanDownloader.apk
           echo "✅ Signature verified!"
 
+      # 1️⃣1️⃣ Upload APK artifact
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
