--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,48 +11,42 @@ jobs:
     timeout-minutes: 45
 
     steps:
-      # 1️⃣ Checkout your code
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 2️⃣ Setup Java 17
       - name: Setup Java 17
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
 
-      # 3️⃣ Setup Android SDK
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
 
-      # 4️⃣ Install required SDK packages
-      - name: Install Android SDK packages
+      - name: Generate Gradle Wrapper
         run: |
-          yes | sdkmanager --licenses
-          sdkmanager "platform-tools" "platforms;android-34" "build-tools;34.0.0"
+          wget -q https://services.gradle.org/distributions/gradle-8.4-bin.zip -O gradle.zip
+          unzip -q gradle.zip
+          export PATH=$PWD/gradle-8.4/bin:$PATH
+          gradle wrapper --gradle-version=8.4 --distribution-type=bin
+          chmod +x gradlew
+          echo "✅ gradlew created"
+          ls -la gradlew
 
-      # 5️⃣ Cache Gradle
       - name: Cache Gradle
         uses: actions/cache@v4
         with:
           path: |
             ~/.gradle/caches
             ~/.gradle/wrapper
-          key: gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          key: gradle-${{ hashFiles('**/*.gradle*') }}
           restore-keys: gradle-
 
-      # 6️⃣ Make gradlew executable
-      - name: Make gradlew executable
-        run: chmod +x gradlew
-
-      # 7️⃣ Decode your keystore
       - name: Decode Keystore
         run: |
           echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > app/brahman.keystore
           echo "✅ Keystore ready"
 
-      # 8️⃣ Build Release APK
       - name: Build Release APK
         env:
           KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
@@ -62,23 +56,18 @@ jobs:
           ./gradlew assembleRelease --no-daemon --stacktrace
         timeout-minutes: 35
 
-      # 9️⃣ Locate and rename APK
-      - name: Locate APK
+      - name: Copy APK
         run: |
-          echo "📦 Finding APK..."
           find . -name "*.apk" -type f
           cp app/build/outputs/apk/release/app-release.apk BrahmanDownloader.apk
           ls -lh BrahmanDownloader.apk
-          echo "✅ APK ready!"
 
-      # 🔟 Verify APK signature
       - name: Verify Signature
         run: |
           BUILD_TOOLS=$(ls $ANDROID_HOME/build-tools | sort -V | tail -1)
           $ANDROID_HOME/build-tools/$BUILD_TOOLS/apksigner verify --verbose BrahmanDownloader.apk
           echo "✅ Signature verified!"
 
-      # 1️⃣1️⃣ Upload APK artifact
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
