--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,15 +44,16 @@ android {
             useLegacyPackaging true
         }
         resources {
-            excludes += ['META-INF/DEPENDENCIES', 'META-INF/LICENSE', 'META-INF/LICENSE.txt', 'META-INF/NOTICE']
+            excludes += ['META-INF/DEPENDENCIES', 'META-INF/LICENSE',
+                         'META-INF/LICENSE.txt', 'META-INF/NOTICE']
         }
     }
 }
 
 dependencies {
-    // yt-dlp bundled for Android - truly standalone
-    implementation 'com.github.yausername.youtubedl-android:library:0.17.0'
-    implementation 'com.github.yausername.youtubedl-android:ffmpeg:0.17.0'
+    // ✅ CORRECT versions - confirmed available on JitPack
+    implementation 'com.github.yausername.youtubedl-android:library:0.16.+'
+    implementation 'com.github.yausername.youtubedl-android:ffmpeg:0.16.+'
 
     // AndroidX
     implementation 'androidx.appcompat:appcompat:1.6.1'
@@ -60,12 +61,12 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.recyclerview:recyclerview:1.3.2'
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'androidx.work:work-runtime:2.9.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
 
     // Material Design 3
     implementation 'com.google.android.material:material:1.11.0'
 
-    // Image loading
+    // Glide for image loading
     implementation 'com.github.bumptech.glide:glide:4.16.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
 
