--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,9 +51,10 @@ android {
 }
 
 dependencies {
-    // ✅ CORRECT versions - confirmed available on JitPack
-    implementation 'com.github.yausername.youtubedl-android:library:0.16.+'
-    implementation 'com.github.yausername.youtubedl-android:ffmpeg:0.16.+'
+    // ✅ CORRECT: Maven Central coordinates (moved from JitPack in v0.16.0)
+    // Latest stable version: 0.17.4
+    implementation 'io.github.junkfood02.youtubedl-android:library:0.17.4'
+    implementation 'io.github.junkfood02.youtubedl-android:ffmpeg:0.17.4'
 
     // AndroidX
     implementation 'androidx.appcompat:appcompat:1.6.1'
